--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,9 +4,9 @@ events {
 
 http {
     upstream myapp {
-        server application1_pf:5000 weight=3;
-        server application2_pf:5000 weight=2;
-        server application3_pf:5000 weight=1;
+        server application1_pf:5000 weight=3;  # Instancia 1
+        server application2_pf:5000 weight=2;  # Instancia 2
+        server application3_pf:5000 weight=1;  # Instancia 3
     }
 
     server {
@@ -14,6 +14,10 @@ http {
 
         location / {
             proxy_pass http://myapp;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
